...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome"
        android:id="@+id/fullNameTextView"
        android:autoText="false"
        android:textSize="18sp"
...
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/fullNameEditText"
        android:layout_below="@+id/fullNameTextView"
        android:layout_alignParentLeft="true"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Data De Nascimento"
        android:id="@+id/birthdayTextView"
        android:layout_below="@+id/fullNameEditText"
        android:layout_alignParentLeft="true"
...
        android:inputType="date"
        android:ems="10"
        android:id="@+id/birthdayEditText"
        android:layout_below="@+id/birthdayTextView"
        android:layout_alignParentLeft="true"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tipo Sanguíneo"
        android:id="@+id/typeBloodTextView"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
...
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/typeBloodSpinner"
        android:entries="@array/typeBlood"
        android:prompt="@string/typeBlood_prompt"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cardiaco"
        android:id="@+id/cardiacTextView"
        android:autoText="false"
        android:textSize="18sp"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cardiacSpinner"
        android:layout_below="@+id/cardiacTextView"
        android:layout_alignParentLeft="true"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Diabetico"
        android:id="@+id/diabeticTextView"
        android:autoText="false"
        android:textSize="18sp"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/diabeticSpinner"
        android:entries="@array/diabetic"
        android:prompt="@string/diabetic_prompt"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hipertenso"
        android:id="@+id/hipertensionTextView"
        android:layout_below="@+id/cardiacSpinner"
        android:autoText="false"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Soropositivo"
        android:id="@+id/seropositiveTextView"
        android:autoText="false"
        android:textSize="18sp"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hipertensionSpinner"
        android:layout_below="@+id/hipertensionTextView"
        android:layout_alignParentLeft="true"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/soropositiveSpinner"
        android:layout_alignBottom="@+id/hipertensionSpinner"
        android:layout_alignLeft="@+id/seropositiveTextView"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salvar"
        android:id="@+id/saveButton"
        android:textSize="13dp"
        android:clickable="true"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Excluir"
        android:textSize="13dp"
        android:id="@+id/deleteButton"
...
        android:layout_height="wrap_content"
        android:text="Observações Especiais"
        android:id="@+id/observations"
        android:layout_below="@+id/hipertensionSpinner"
        android:layout_alignParentLeft="true"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/observationsEditText"
        android:layout_below="@+id/observations"
        android:layout_alignParentLeft="true"
...
